// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render PlayerList component 1`] = `
<div
  className="player-list"
>
  <div
    className="player-list__title"
  >
    <p>
      Players (
      1
      )
    </p>
  </div>
  <Connect(PlayerListItem)
    key="1"
    player={
      Object {
        "id": 1,
        "name": "LiptuN",
      }
    }
    readonly={false}
  />
</div>
`;

exports[`Render PlayerList component with empty players array 1`] = `
<div
  className="player-list"
>
  <div
    className="player-list__title"
  >
    <p>
      Players (
      0
      )
    </p>
    <p
      className="info"
    >
      At least one player is required
    </p>
  </div>
</div>
`;
